# park_photo

./: .gitignore  README.md  pyproject.toml
devops/: Dockerfile
docker/: docker-compose-template.yaml
docker/app/: Dockerfile
docker/grafana/: dashboard.json  dashboards.yaml  prometheus.yaml
docker/nginx/: Dockerfile  nginx.conf
src/: .env-example  .pylintrc  aerich.ini  apsheduler_runner.py  config.py  main.py  security.py  worker.py
src/admin/: login.py  resources.py  routes.py  setup_admin.py  utils.py
src/admin/templates/: base.html  dashboard.html
src/admin/templates/components/: footer.html
src/core/: admin.py
src/core/api/: deps.py
src/core/crud/: README.md  base.py  user.py
src/core/healthcheck/: endpoints.py
src/core/models/: user.py
src/core/schemas/: __init__.py  response.py  user.py
src/core/websocket/: deps.py  manager.py  router.py
src/logger/: logger.py  logger_config.py  middleware.py  processors.py  setup_logging.py  utils.py
src/metrics/: app_http_request_latency_seconds.py  app_http_response_bytes_total.py  app_http_response_error_count.py  app_up.py  instrumentator.py  setup_metrics.py
src/migrations/models/: 0_20211123165645_init.sql  1_20220607111407_add module parking.sql
src/parking/: admin.py  tasks.py
src/parking/crud/: __init__.py  parking.py
src/parking/models/: __init__.py  camera.py  parking.py
src/parking/schemas/: __init__.py  parking.py
src/parking/video/: video_processing.py
src/redis/: utils.py
src/sentry/: setup_sentry.py
src/telemetry/: setup_telemetry.py  telemetry.py
src/telemetry/instrumentor/: redis.py
src/tests/: test_parking.py  test_user.py
(+8 files in other folders)
